--- a/public/no.html
+++ b/public/no.html
@@ -48,9 +48,12 @@
     </div>
     <script>
       // navigate to /fine.html when the .fine button is clicked
-      document.addEventListener('DOMContentLoaded', function () {
-        const btn = document.querySelector('.fine');
-        if (btn) btn.addEventListener('click', () => { window.location.href = '/fine.html'; });
+      document.addEventListener("DOMContentLoaded", function () {
+        const btn = document.querySelector(".fine");
+        if (btn)
+          btn.addEventListener("click", () => {
+            window.location.href = "/fine.html";
+          });
       });
     </script>
   </body>
