chore: publish rebuilt dist to gh-pages (relative nav fix)

--- a/no.html
+++ b/no.html
@@ -48,11 +48,11 @@
     </div>
     <script>
       // navigate to fine.html (relative) when the .fine button is clicked
-      document.addEventListener('DOMContentLoaded', function () {
-        const btn = document.querySelector('.fine');
-        if (btn) btn.addEventListener('click', () => { window.location.href = 'fine.html'; });
-      });
-    </script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const btn = document.querySelector(".fine");
+        if (btn)
+          btn.addEventListener("click", () => {
+            window.location.href = "./fine.html";
           });
       });
     </script>
